[package]
name = "redistill"
version = "1.0.6"
edition = "2024"
authors = ["Shahid Shaikh"]
description = "High-performance Redis-compatible key-value store that outperforms Redis"
license = "MIT"
repository = "https://github.com/shahidshaikh/redistill"
keywords = ["redis", "database", "key-value", "performance", "async"]
categories = ["database", "caching"]

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "macros", "rt-multi-thread", "sync", "signal", "fs"] }
parking_lot = "0.12"
bytes = "1"
num_cpus = "1"
dashmap = "6"
crossbeam = "0.8"
once_cell = "1"
ahash = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio-rustls = "0.26"
rustls-pemfile = "2"
fastrand = "2"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false

